Complete authors name

--- a/docs/presentation/slides.tex
+++ b/docs/presentation/slides.tex
@@ -9,7 +9,7 @@
 
 \title{A Conversational AI Agent for FIB}
 \subtitle{Hierarchical Design and LLM-as-Judge Evaluation}
-\author[Ákos Schneider, Ignasi TODO]{Ákos Schneider \and Ignasi TODO}
+\author[Ákos Schneider, Ignasi Cervero]{Ákos Schneider \and Ignasi Cervero}
 \institute[]{Facultat d'Informàtica de Barcelona\\Universitat Politècnica de Catalunya}
 \date{Human Language Engineering}
 
