--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -6,7 +6,8 @@ Hierarchical Design and LLM-as-Judge Evaluation}
 \author{
     Ákos Schneider\\
     \texttt{akos.schneider@estudiantat.upc.edu}\\[0.5em]
-    TODO: Ignasi
+    Ignasi Cervero\\
+    \texttt{ignasi.cervero@estudiantat.upc.edu}\\[0.5em]
     Human Language Engineering\\
     Universitat Politècnica de Catalunya\\
     Facultat d'Informàtica de Barcelona
