--- a/docs/presentation/slides.tex
+++ b/docs/presentation/slides.tex
@@ -499,9 +499,9 @@
       \vspace{1em}
       \textbf{Links}
       \begin{itemize}
+        \item GitHub: \url{https://github.com/akossch0/upc-fib-agent}
         \item FIB API: \url{https://api.fib.upc.edu/v2/}
         \item LangGraph: \url{https://langchain-ai.github.io/langgraph/}
-        \item deepagents: \url{https://github.com/langchain-ai/deepagents}
       \end{itemize}
       \vspace{1em}
       \centering
