--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -24,6 +24,8 @@ This project presents a conversational AI agent for the Facultat d'Informàtica 
 To systematically evaluate agent performance, we developed an LLM-as-judge framework with seven custom metrics: relevance, helpfulness, conciseness, structure, tone, error handling, and tool appropriateness. Evaluation on a curated dataset of 45 questions across 10 categories demonstrates strong performance, with the agent achieving 0.90 relevance and 0.89 helpfulness scores. We also provide a Model Context Protocol (MCP) server for tool interoperability with other AI assistants.
 
 The contributions of this work are fourfold. First, we present an open-source FIB API agent featuring a hierarchical architecture. Second, we introduce a university-domain evaluation dataset annotated with complexity levels. Third, we establish a reusable LLM-as-judge evaluation framework complete with detailed rubrics. Finally, we document prompt engineering patterns designed to handle ambiguous queries, date reasoning, and course disambiguation in educational contexts.
+
+The source code is available at \url{https://github.com/akossch0/upc-fib-agent}.
 \end{abstract}
 
 \newpage
