--- a/docs/report/sections/02-methodology.tex
+++ b/docs/report/sections/02-methodology.tex
@@ -7,19 +7,19 @@ This section describes the theoretical foundations, design approach, and technol
 
 \subsubsection{Conversational AI Agents}
 
-Conversational AI has evolved significantly from rule-based chatbots to sophisticated agents powered by Large Language Models (LLMs) capable of reasoning, planning, and taking actions~\cite{react}. Modern agents combine the extensive natural language understanding of LLMs with the ability to interact with external tools and APIs. The key distinction between a standard LLM chatbot and an agent is this capacity for tool use; agents can call external functions to retrieve information or perform actions, subsequently incorporating these results into their responses. This paradigm, known as tool-augmented language models, enables LLMs to overcome the limitations of their static training data by accessing real-time information~\cite{langchain-agents}.
+Conversational AI has evolved significantly from rule-based chatbots to sophisticated agents powered by Large Language Models (LLMs) capable of reasoning, planning, and taking actions~\cite{llm-agents-survey}. Modern agents combine the extensive natural language understanding of LLMs with the ability to interact with external tools and APIs~\cite{react}. The key distinction between a standard LLM chatbot and an agent is this capacity for tool use; agents can call external functions to retrieve information or perform actions, subsequently incorporating these results into their responses. This paradigm, known as tool-augmented language models~\cite{toolformer}, enables LLMs to overcome the limitations of their static training data by accessing real-time information~\cite{langchain-agents}.
 
 \subsubsection{ReAct: Reasoning and Acting}
 
-The ReAct paradigm~\cite{react} proposes a synergistic approach where reasoning traces, or "thoughts," are interleaved with actions. The agent follows a continuous loop consisting of a thought, where it reasons about the current state and decides on a course of action; an action, which involves calling a tool or API; and an observation, where it processes the tool's response. This cyclical approach has proven effective for knowledge-intensive tasks requiring multi-step reasoning. Our implementation builds on these principles through the deepagents library, a hierarchical agent harness that structures this interaction.
+The ReAct paradigm~\cite{react} proposes a synergistic approach where reasoning traces, or "thoughts," are interleaved with actions. Building upon chain-of-thought prompting~\cite{chain-of-thought}, which elicits step-by-step reasoning in LLMs, ReAct extends this by grounding thoughts in concrete actions. The agent follows a continuous loop consisting of a thought, where it reasons about the current state and decides on a course of action; an action, which involves calling a tool or API; and an observation, where it processes the tool's response. This cyclical approach has proven effective for knowledge-intensive tasks requiring multi-step reasoning. Our implementation builds on these principles through the deepagents library, a hierarchical agent harness that structures this interaction.
 
 \subsubsection{Agent Harnesses and deepagents}
 
-As LLM agents have evolved from simple tool-calling patterns to complex multi-step workflows, the need for standardized agent harnesses has emerged. These frameworks provide common infrastructure for planning, context management, and hierarchical task delegation. The \textbf{deepagents} library~\cite{deepagents} addresses these needs by offering hierarchical subagent spawning to delegate subtasks to specialized agents with isolated contexts. It provides planning tools to decompose complex tasks into trackable steps, manages context to prevent window overflow through file system abstraction, and leverages LangGraph for stateful graph execution and checkpointing. Our implementation utilizes this library to create a root agent equipped with private tools and a subagent dedicated to public FIB API queries, enabling focused system prompts and establishing clean security boundaries.
+As LLM agents have evolved from simple tool-calling patterns to complex multi-step workflows, the need for standardized agent harnesses has emerged~\cite{gorilla}. These frameworks provide common infrastructure for planning, context management, and hierarchical task delegation. The \textbf{deepagents} library~\cite{deepagents} addresses these needs by offering hierarchical subagent spawning to delegate subtasks to specialized agents with isolated contexts. It provides planning tools to decompose complex tasks into trackable steps, manages context to prevent window overflow through file system abstraction, and leverages LangGraph~\cite{langgraph} for stateful graph execution and checkpointing. Our implementation utilizes this library to create a root agent equipped with private tools and a subagent dedicated to public FIB API queries, enabling focused system prompts and establishing clean security boundaries.
 
 \subsubsection{LLM-as-Judge Evaluation}
 
-Evaluating open-ended language generation presents challenges because traditional metrics like BLEU or ROUGE correlate poorly with human judgments of quality~\cite{geval}. The LLM-as-judge approach addresses this by using a capable language model as an evaluator, prompted with specific criteria and rubrics. G-Eval~\cite{geval} introduced a framework where the LLM judge follows structured evaluation steps to produce scores. This method achieves a higher correlation with human judgments than reference-based metrics, particularly for dimensions like helpfulness and coherence that require semantic understanding.
+Evaluating open-ended language generation presents challenges because traditional metrics like BLEU or ROUGE correlate poorly with human judgments of quality~\cite{geval}. The LLM-as-judge approach addresses this by using a capable language model as an evaluator, prompted with specific criteria and rubrics. G-Eval~\cite{geval} introduced a framework where the LLM judge follows structured evaluation steps to produce scores, while MT-Bench~\cite{mt-bench} demonstrated that strong LLMs can serve as scalable and explainable evaluators for multi-turn conversations. These methods achieve higher correlation with human judgments than reference-based metrics, particularly for dimensions like helpfulness and coherence that require semantic understanding.
 
 \subsubsection{Model Context Protocol}
 
