--- a/docs/report/references.bib
+++ b/docs/report/references.bib
@@ -104,3 +104,30 @@
     url     = {https://github.com/langchain-ai/deepagents},
     urldate = {2024-12-15}
 }
+
+@article{llm-agents-survey,
+    author    = {Wang, Lei and Ma, Chen and Feng, Xueyang and Zhang, Zeyu and Yang, Hao and Zhang, Jingsen and Chen, Zhiyuan and Tang, Jiakai and Chen, Xu and Lin, Yankai and Zhao, Wayne Xin and Wei, Zhewei and Wen, Ji-Rong},
+    title     = {A Survey on Large Language Model based Autonomous Agents},
+    journal   = {Frontiers of Computer Science},
+    volume    = {18},
+    number    = {6},
+    year      = {2024},
+    url       = {https://arxiv.org/abs/2308.11432}
+}
+
+@inproceedings{mt-bench,
+    author    = {Zheng, Lianmin and Chiang, Wei-Lin and Sheng, Ying and Zhuang, Siyuan and Wu, Zhanghao and Zhuang, Yonghao and Lin, Zi and Li, Zhuohan and Li, Dacheng and Xing, Eric P. and Zhang, Hao and Gonzalez, Joseph E. and Stoica, Ion},
+    title     = {Judging {LLM}-as-a-Judge with {MT-Bench} and Chatbot Arena},
+    booktitle = {Advances in Neural Information Processing Systems},
+    volume    = {36},
+    year      = {2023},
+    url       = {https://arxiv.org/abs/2306.05685}
+}
+
+@article{gorilla,
+    author    = {Patil, Shishir G. and Zhang, Tianjun and Wang, Xin and Gonzalez, Joseph E.},
+    title     = {Gorilla: Large Language Model Connected with Massive {APIs}},
+    journal   = {arXiv preprint arXiv:2305.15334},
+    year      = {2023},
+    url       = {https://arxiv.org/abs/2305.15334}
+}
