--- a/docs/report/sections/02-methodology.tex
+++ b/docs/report/sections/02-methodology.tex
@@ -43,7 +43,7 @@ The system prompts serve as the primary mechanism for guiding agent behavior, wi
 
 \subsection{Tools and Technologies}
 
-The project employs a suite of technologies to achieve its goals. LangGraph serves as the underlying stateful graph execution engine with checkpointing capabilities. On top of this, deepagents functions as the hierarchical agent harness, providing subagent spawning, planning tools, and context management. The LLM backbone consists of Google Vertex AI models, specifically Gemini 2.5 Flash for speed and Gemini 2.5 Pro for complex queries. Data validation and type-safe API response parsing are handled by Pydantic. For evaluation, the project uses deepeval (GEval), an LLM-as-judge framework with customizable metrics. Tavily provides an external web search API for information beyond the FIB scope, and the MCP Protocol ensures tool server standardization for AI interoperability.
+The project employs a suite of technologies to achieve its goals. LangGraph serves as the underlying stateful graph execution engine with checkpointing capabilities. On top of this, deepagents functions as the hierarchical agent harness, providing subagent spawning, planning tools, and context management. The LLM backbone consists of Google Vertex AI models from the Gemini family: Gemini 3 Flash (preview) for best overall performance, Gemini 2.5 Flash for speed and cost efficiency, and Gemini 2.5 Pro for complex reasoning tasks. Data validation and type-safe API response parsing are handled by Pydantic. For evaluation, the project uses deepeval (GEval), an LLM-as-judge framework with customizable metrics. Tavily provides an external web search API for information beyond the FIB scope, and the MCP Protocol ensures tool server standardization for AI interoperability.
 
 \subsection{Data Sources}
 
