--- a/docs/report/sections/05-conclusions.tex
+++ b/docs/report/sections/05-conclusions.tex
@@ -5,7 +5,7 @@ This section summarizes the project's achievements, acknowledges limitations, an
 
 \subsection{Summary}
 
-This project successfully developed a conversational AI agent for the Facultat d'Informàtica de Barcelona (FIB) that provides natural language access to university academic information. The agent integrates with the official FIB API to access course catalogs, exam schedules, professor directories, news, and user-specific data through OAuth authentication. It implements a hierarchical agent architecture using LangGraph and the deepagents library, featuring a root agent that handles user context and a specialized subagent for public API queries. The system achieves strong performance on relevance and helpfulness metrics, the two dimensions most critical for user satisfaction. Furthermore, it includes a comprehensive evaluation framework using the LLM-as-judge methodology with custom metrics and curated test questions. Finally, the project provides tool interoperability through an MCP server, enabling other AI assistants to access FIB data. The evaluation demonstrates that modern LLM agents, when properly configured with domain-specific tools and carefully engineered prompts, can effectively serve as natural language interfaces to structured APIs.
+This project successfully developed a conversational AI agent for the Facultat d'Informàtica de Barcelona (FIB) that provides natural language access to university academic information. The agent integrates with the official FIB API to access course catalogs, exam schedules, professor directories, news, and user-specific data through OAuth authentication. It implements a hierarchical agent architecture using LangGraph and the deepagents library, featuring a root agent that handles user context and a specialized subagent for public API queries. The system achieves strong performance on relevance and helpfulness metrics, the two dimensions most critical for user satisfaction, with Gemini 3 Flash achieving 0.98 relevance and 0.99 helpfulness. Furthermore, it includes a comprehensive evaluation framework using the LLM-as-judge methodology with custom metrics and curated test questions. Finally, the project provides tool interoperability through an MCP server, enabling other AI assistants to access FIB data. The evaluation demonstrates that modern LLM agents, when properly configured with domain-specific tools and carefully engineered prompts, can effectively serve as natural language interfaces to structured APIs.
 
 \subsection{Contributions}
 
