--- a/docs/report/sections/appendix.tex
+++ b/docs/report/sections/appendix.tex
@@ -134,6 +134,13 @@ The evaluation results include two HTML dashboards. The first visualizes data fo
     \label{fig:dashboard}
 \end{figure}
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{gemini3vs2.5flash.png}
+    \caption{Performance comparison between Gemini 3 Flash and Gemini 2.5 Flash across all evaluation metrics.}
+    \label{fig:gemini-comparison}
+\end{figure}
+
 \subsection{Sample Inference Trajectories}
 
 \subsubsection{Simple Query Trajectory}
