--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -19,9 +19,9 @@ Hierarchical Design and LLM-as-Judge Evaluation}
 \maketitle
 
 \begin{abstract}
-This project presents a conversational AI agent for the Facultat d'Informàtica de Barcelona (FIB) that provides natural language access to university academic information. The agent integrates with the official FIB API to retrieve course catalogs, exam schedules, professor contacts, and user-specific data through OAuth authentication. We implement a hierarchical agent architecture using the deepagents library~\cite{deepagents}, where a root agent handles user context and private tools while delegating public API queries to a specialized subagent. The system supports multiple Gemini models and includes an internet search fallback for queries outside the FIB domain. We additionally evaluate local models (Qwen 2.5 7B, Llama 3.2 3B) to explore privacy-preserving deployment options.
+This project presents a conversational AI agent for the Facultat d'Informàtica de Barcelona (FIB) that provides natural language access to university academic information. The agent integrates with the official FIB API to retrieve course catalogs, exam schedules, professor contacts, and user-specific data through OAuth authentication. We implement a hierarchical agent architecture using the deepagents library~\cite{deepagents}, where a root agent handles user context and private tools while delegating public API queries to a specialized subagent. The system supports multiple Gemini models (including Gemini 3 Flash, 2.5 Flash, and 2.5 Pro) and includes an internet search fallback for queries outside the FIB domain. We additionally evaluate local models (Qwen 2.5 7B, Llama 3.2 3B) to explore privacy-preserving deployment options.
 
-To systematically evaluate agent performance, we developed an LLM-as-judge framework with seven custom metrics: relevance, helpfulness, conciseness, structure, tone, error handling, and tool appropriateness. Evaluation on a curated dataset of 45 questions across 10 categories demonstrates strong performance, with the agent achieving 0.90 relevance and 0.89 helpfulness scores. We also provide a Model Context Protocol (MCP) server for tool interoperability with other AI assistants.
+To systematically evaluate agent performance, we developed an LLM-as-judge framework with seven custom metrics: relevance, helpfulness, conciseness, structure, tone, error handling, and tool appropriateness. Evaluation on a curated dataset of 45 questions across 10 categories demonstrates strong performance, with the best model (Gemini 3 Flash) achieving 0.98 relevance and 0.99 helpfulness scores. We also provide a Model Context Protocol (MCP) server for tool interoperability with other AI assistants.
 
 The contributions of this work are fourfold. First, we present an open-source FIB API agent featuring a hierarchical architecture. Second, we introduce a university-domain evaluation dataset annotated with complexity levels. Third, we establish a reusable LLM-as-judge evaluation framework complete with detailed rubrics. Finally, we document prompt engineering patterns designed to handle ambiguous queries, date reasoning, and course disambiguation in educational contexts.
 
